[gd_scene load_steps=4 format=3 uid="uid://4djflhfxpkul"]

[ext_resource type="Script" path="res://src/menu/settings_menu.gd" id="1_apl24"]
[ext_resource type="FontFile" uid="uid://ckdjks6e8qo4n" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="1_xfj5f"]

[sub_resource type="LabelSettings" id="LabelSettings_sgf52"]
font = ExtResource("1_xfj5f")
font_size = 41

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_apl24")

[node name="PauseDimRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 32.0
offset_bottom = 69.0
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_sgf52")
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="SoundLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Sound Volume"

[node name="SoundSlider" type="HSlider" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="SoundIndicator" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "50%"
horizontal_alignment = 1

[node name="MusicLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="MusicIndicator" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "50%"
horizontal_alignment = 1

[node name="FullscreenButton" type="CheckButton" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Fullscreen"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit to Menu"

[node name="QuitDimRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="QuitDialog" type="ConfirmationDialog" parent="."]
initial_position = 2
size = Vector2i(223, 106)
ok_button_text = "Quit"
dialog_text = "Do you really want to quit?
Progress will not be saved!"

[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/GridContainer/SoundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="canceled" from="QuitDialog" to="." method="_on_quit_dialog_canceled"]
[connection signal="confirmed" from="QuitDialog" to="." method="_on_quit_dialog_confirmed"]
